--- a/src/components/Accueil/Accueil.css
+++ b/src/components/Accueil/Accueil.css
@@ -73,21 +73,12 @@
     background-color: #FF5757;
     color: white;
   }
+
   
-  .content {
-    background-color: rgba(255, 255, 255, 0.9);
-    padding: 20px;
-    border-radius: 12px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    margin: 20px auto;
-    width: 80%;
-    max-width: 600px;
-    text-align: center;
-  }
   
-  .logo {
+  #logo {
     width: 120px;
-    margin: 20px auto;
+
   }
   
   .description {
@@ -122,4 +113,6 @@
     background-color: #FFC107;
   }
   
- 
+ #anonyme {
+  background-color: #CEDEB3;
+ }
