--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,17 @@
   box-sizing: border-box;
 }
 
+.title{
+  padding: 20px;
+  max-width: 800px;
+  margin: auto;
+  font-family: 'Arial', sans-serif;
+}
+
+#logo{
+  margin-top: 100px;
+}
+
 html, body {
   height: 100%; /* S'étend sur toute la hauteur */
   overflow-y: auto; /* Active le défilement vertical */
