--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,13 @@
 /*Fonts*/
 @import url("https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&family=VT323&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Jersey+15&display=swap');
 
 /* Réinitialisation générale */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-.title {
-  padding: 20px;
-  max-width: 800px;
-  margin: auto;
-  font-family: "Arial", sans-serif;
 }
 
 #logo {
@@ -50,10 +44,6 @@ nav {
   left: 0;
   width: 100%; /* S'étend sur toute la largeur */
   z-index: 10;
-}
-
-body {
-  padding-top: 60px; /* Compense la hauteur de la barre de navigation */
 }
 
 nav a {
