--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,17 +1,33 @@
-h1.title {
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  top: 90px;
-  font-size: 40px;
-  color: #333;
-  margin: 0;
+.header {
+  background-color: #89C4FE;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 3rem;
 }
 
-.header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 12%;
-  background-color: #3db5ff;
+.logo-title {
   display: flex;
+  align-items: center;
+}
+
+.logo-title:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+
+.logo-title .logo {
+  max-width: 6rem;
+}
+
+.title {
+  font-family: "Jersey 15", sans-serif;
+  font-size: xx-large;
+  font-weight: bold;
+}
+
+.buttons {
+  display: flex;
+  column-gap: 1rem;
 }
