--- a/src/App.css
+++ b/src/App.css
@@ -3,78 +3,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&family=VT323&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Jersey+15&display=swap');
 
-/* Réinitialisation générale */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-#logo {
-  margin-top: 100px;
-}
-
-html,
 body {
-  height: 100%; /* S'étend sur toute la hauteur */
-  overflow-y: auto; /* Active le défilement vertical */
-  margin: 0;
-  padding: 0;
   font-family: "Poppins", sans-serif;
-  background: linear-gradient(to bottom, #a1e3ff, #f0f9ff);
-  color: #333;
+  background-image: url("./img/accueil.png");
+  margin: 0;
 }
 
-#root {
-  min-height: 100%;
+.page-content {
+  height: 90vh;
   display: flex;
-  flex-direction: column; /* Aligne les enfants verticalement */
-}
-
-/* Navigation */
-nav {
-  display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  background-color: #008cff; /* Bleu vif pour le header */
-  padding: 15px 0;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  position: fixed; /* Fixe la navigation au sommet */
-  top: 0;
-  left: 0;
-  width: 100%; /* S'étend sur toute la largeur */
-  z-index: 10;
-}
-
-nav a {
-  text-decoration: none;
-  color: #fff;
-  font-size: 1.2rem;
-  font-weight: bold;
-  margin: 0 20px;
-  padding: 10px 15px;
-  border-radius: 8px;
-  transition: all 0.3s ease-in-out;
-}
-
-nav a:hover {
-  background-color: #ffd700; /* Jaune vif au survol */
-  color: #333;
-  transform: scale(1.1);
-}
-
-/* Conteneurs des pages */
-.home-container,
-.page-container,
-.quiz-container,
-.sortie-container {
-  display: block;
-  margin: 0 auto;
-  padding: 20px;
-  width: 100%;
-  max-width: 1200px;
-  box-sizing: border-box;
-  height: auto;
 }
 
 /* Titres et texte */
