--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem 3rem;
+  height: 10vh;
 }
 
 .logo-title {
@@ -16,9 +17,8 @@
   transform: scale(1.1);
 }
 
-
 .logo-title .logo {
-  max-width: 6rem;
+  max-height: 10vh;
 }
 
 .title {
