--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,3 +1,11 @@
+.page-container {
+  background-image: url('../../img/accueil.png'); 
+  background-size: cover; 
+  background-position: center; 
+  min-height: 100vh; 
+  min-width: 218vh;
+}
+
 .text-container {
   margin: 60px auto 50px;
   max-width: 800px;
