--- a/src/App.css
+++ b/src/App.css
@@ -7,18 +7,34 @@ body {
   font-family: "Poppins", sans-serif;
   background-image: url("./img/accueil.png");
   margin: 0;
+  height: 100%;
 }
 
 .page-content {
-  height: 90vh;
+  height: 90%;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-/* Titres et texte */
 h1 {
   font-size: 2.5rem;
   margin-bottom: 20px;
   color: #333;
+}
+
+.bouton {
+  display: flex;
+  align-items: center;
+  column-gap: 0.5rem;
+  padding: 0.5rem 1rem;
+  border-radius : 5rem;
+  text-transform: uppercase;
+  font-family: "Jersey 15", sans-serif;
+  font-size: larger;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border: 0.1rem solid;
+  font-weight: normal !important;
+  transition: background-color .15s ease-in-out;
+  cursor: pointer;
 }
