--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem 3rem;
-  height: 10vh;
+  height: 10%;
 }
 
 .logo-title {
