--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&family=VT323&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Jersey+15&display=swap');
 
+html, body, #root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   background-image: url("./img/accueil.png");
-  margin: 0;
-  height: 100%;
 }
 
 .page-content {
