--- a/src/components/Question/Question.css
+++ b/src/components/Question/Question.css
@@ -1,13 +1,9 @@
 .question-container {
-  width: 590px;
-  height: 93px;
-  background-color: #fbfbfb;
-  border-radius: 10px;
-  padding: 20px 12px;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
-  align-items: center;
-  box-shadow: 0 0 0 0px #e7e6e7, 0 0 0 4px #d3d2d3, 0 0 0 5px #a7a6a7,
-    0 0 0 6px #767576, 0 0 0 7px #555455, 0 0 0 10px #fbfbfb;
+  padding: 1rem 2rem;
+  background-color: #E6E7E9;
+  width: fit-content;
+  border-radius: 2rem 2rem 2rem 0;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border: solid #DFE0E2;
+  font-weight: bolder;
 }
