--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,8 +1,16 @@
+.home-page {
+  background: url("../../img/accueil.png");
+  background-size: contain;
+  height: 100%;
+}
+
 .text-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   row-gap: 1rem;
+  height: 100%;
+  justify-content: center;
 }
 
 .text-container img {
