--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&family=VT323&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Jersey+15&display=swap');
 
-html, body, #root {
-  height: 100%;
+* {
   margin: 0;
   padding: 0;
+}
+
+html, body, #root {
+  height: 100%;
   overflow: hidden;
 }
 
@@ -20,12 +23,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
-
-h1 {
-  font-size: 2.5rem;
-  margin-bottom: 20px;
-  color: #333;
 }
 
 .bouton {
